feat: 概览界面增加服务重启以及面板重启功能
